--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "tsx": "^3.12.7"
+  },
+  "devDependencies": {
+    "tsup": "^6.7.0"
   }
 }
