--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "build": "tsup src --outDir build --format esm",
-    "start": "node build/server.js",
-    "dev": "tsx watch src/server.ts"
+    "build": "tsc",
+    "start": "node ./src/server.js",
+    "dev": "npx nodemon ./src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,9 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "tsx": "^3.12.7"
+    "tsc": "^2.0.4",
+    "tsup": "^6.7.0",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.3"
   }
 }
