--- a/.env
+++ b/.env
@@ -7,4 +7,7 @@ PORT=5000
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:example@localhost:5432/db"
+DATABASE_URL="postgresql://postgres:ofZP7fjzkjQBhBjCxWuc@containers-us-west-69.railway.app:7343/railway"
+# DATABASE_URL="postgresql://postgres:example@localhost:5432/db"
+JWT_KEY=keyjwt
+JWT_EXPIRATION=1d
